cabal-version: 3.0
name:          advent2020
version:       0.1.0.0
build-type:    Simple

common lang
  build-depends:      base >=4.12 && <4.14
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    Arrows
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveFunctor
    DeriveGeneric
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TemplateHaskell
    TupleSections
    TypeOperators

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wcompat
    -Wincomplete-record-updates -Wmissing-home-modules
    -Wmissing-export-lists -Wredundant-constraints

  build-depends:      relude ==0.7.0.0

library
  import:          lang
  hs-source-dirs:  src

  -- cabal-fmt: expand src
  exposed-modules:
    Advent2020.D1
    Advent2020.D10
    Advent2020.D11
    Advent2020.D12
    Advent2020.D13
    Advent2020.D14
    Advent2020.D15
    Advent2020.D2
    Advent2020.D3
    Advent2020.D4
    Advent2020.D5
    Advent2020.D6
    Advent2020.D7
    Advent2020.D8
    Advent2020.D9
    Advent2020.Internal
    Advent2020.Internal.D10
    Advent2020.Internal.D11
    Advent2020.Internal.D12
    Advent2020.Internal.D13
    Advent2020.Internal.D14
    Advent2020.Internal.D15
    Advent2020.Internal.D2
    Advent2020.Internal.D3
    Advent2020.Internal.D4
    Advent2020.Internal.D5
    Advent2020.Internal.D6
    Advent2020.Internal.D7
    Advent2020.Internal.D8
    Advent2020.Internal.D9

  build-depends:
    , algebraic-graphs    ==0.5
    , arithmoi            ==0.11.0.1
    , containers          ==0.6.4.1
    , extra               ==1.7.8
    , megaparsec          ==9.0.1
    , parser-combinators  ==1.2.1

test-suite tests
  import:         lang
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs

  -- cabal-fmt: expand test -Main
  other-modules:
    Advent2020.D10Spec
    Advent2020.D11Spec
    Advent2020.D12Spec
    Advent2020.D13Spec
    Advent2020.D14Spec
    Advent2020.D15Spec
    Advent2020.D1Spec
    Advent2020.D2Spec
    Advent2020.D3Spec
    Advent2020.D4Spec
    Advent2020.D5Spec
    Advent2020.D6Spec
    Advent2020.D7Spec
    Advent2020.D8Spec
    Advent2020.D9Spec
    Advent2020.Spec.Internal

  build-depends:
    , advent2020
    , hspec       ==2.7.1

executable advent2020
  import:             lang
  ghc-options:        -threaded -with-rtsopts=-N
  hs-source-dirs:     cmd/advent2020
  main-is:            Main.hs

  -- cabal-fmt: expand cmd/advent2020 -Main
  other-modules:
  build-tool-depends: hspec-discover:hspec-discover ==2.7.1
  build-depends:
    , advent2020
    , optparse-applicative  ==0.16.1.0
